prevent splitting up words when wrapping text in table cell
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/branches/gus4@18281 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/webapp/wdk/css/wdk-Record.css
+++ b/View/webapp/wdk/css/wdk-Record.css
@@ -96,7 +96,7 @@
 }
 
 .wdk-RecordMain td {
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .wdk-RecordNavigationExpand {
